# learn_ollvm

./: .gitignore  CMakeLists.txt  README.md
myoutpass/: CMakeLists.txt  outpass.cpp  printins.cpp  printins.h
outpass/: CMakeLists.txt
outpass/myoutpass/: CMakeLists.txt  outpass.cpp
outpass/src/: main.c  main.ori.bc  main.ori.ll
src/: CMakeLists.txt  main.c  main.ori.ll
stringobf/: CMakeLists.txt  stringobf.cpp
